# agentgate

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.server  LICENSE  Makefile  README.md  README_PYPI.md  alembic.ini  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  mcp_guardrails.yaml  pyproject.toml  run  test  uv.toml
.github/workflows/: README.md  ci.yml  dashboard.yml  formal-chaos-campaign.yml  production-ready.yml  release.yml  security.yml
alembic/: README.md  env.py
alembic/versions/: .gitkeep  rev_20260211_0001_formal_security_proof_enforcement.py  rev_20260212_0002_identity_provider_risk_control_plane.py  rev_20260215_0003_mcp_async_jobs_table.py  rev_20260215_0004_runtime_identity_settings_tables.py  rev_20260215_0005_runtime_security_tables.py  rev_20260215_0006_runtime_feature_tables.py  rev_20260215_0007_runtime_parity_tables.py  rev_20260215_1550_1093fdec7208_sync_full_schema_parity.py
dashboard/: .dockerignore  .env.example  AUTH_FILES_SUMMARY.txt  Dockerfile  INSTALLATION_COMPLETE.txt  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
dashboard/e2e/: .gitignore  playwright.config.ts  playwright.smoke.config.ts
dashboard/scripts/: build-docs-bundle.mjs
dashboard/src/: proxy.ts
deploy/: README.md
docker/: README.md  nginx.conf.example
docker/nginx/: nginx.conf
docker/postgres/: postgresql.conf
docker/redis/: redis.conf
docs/: CHANGELOG.md  CONTRIBUTING.md  architecture.md  code-of-conduct.md  command-reference.md  compliance-edge-cases.md  cryptographic-proof-kernel.md  dashboard-production-plan.md  dataset-finetuning-guide.md  demo-guide.md  descope-credential-governance.md  descope-migration-runbook.md  docker-deployment.md  error-handling.md  formal-artifact-scrubbing.md  formal-verification-audit.md  identity-provider-modes.md  jinja2-templating.md  mcp-admin-api-access.md  mcp-comprehensive-guide.md  mcp-gold-standard.md  mcp-ground-truth-schema.md  mcp-security-model.md  mcp-server.md  mfa-setup-guide.md  overview.md  passkey-guide.md  phase4-implementation.md  pii-encryption-flow.md  playground-guide.md  policy-as-code.md  prompt-engineering-implementation.md  prompt-guard.md  publishing-guide.md  resilience-features.md  runtime-enforcement-and-sdk-alignment.md  security-datasets.md  security-setup-guide.md  security.md  tests-completed.md  (+2 more)
docs/_binder/: classification.yaml  migration-map.yaml  nav.yaml
docs/assets/: README.md
docs/internal-reports/: INVESTOR_AUDIT_REPORT_REDACTED.md  MASTER_GOVERNANCE_VERIFICATION_EVIDENCE.md  PRODUCTION_READINESS_REVIEW_2026-03-05.md
docs/reports/: biological-governance-testing-report.md  chaos-campaign-testing-report.md  formal-security-benchmark-template.md
docs/specs/: agent-delegation-lineage.md  counterfactual-verification.md  decision-certificate-protocol.md  distributed-consensus.md  gamma-fact-model.md  invariant-synthesis.md  mcp-delegation-extension.md  semantic-honey-tokens.md
ea_agentgate/: README.md  __init__.py  _version.py  agent.py  api_client.py  client.py  exceptions.py  tool_registry.py  trace.py  transaction_manager.py  verification.py  verification_manager.py
ea_agentgate/backends/: __init__.py  compliant.py  guardrail_backend.py  guardrail_memory.py  guardrail_redis.py  guardrail_types.py  memory.py  protocols.py  redis.py  redis_async.py  redis_common.py  types.py
ea_agentgate/cli/: __init__.py  __main__.py  cmd_approvals.py  cmd_audit.py  cmd_auth.py  cmd_costs.py  cmd_datasets.py  cmd_formal.py  cmd_overview.py  cmd_pii.py  cmd_settings.py  cmd_threats.py  cmd_traces.py  cmd_users.py  formatters.py  table_helpers.py
ea_agentgate/examples/: demo.py  jinja2_templating_demo.py  policy_engine_demo.py  prompt_guard_demo.py  resilience_demo.py
ea_agentgate/feedback/: __init__.py  dpo_formatter.py  (+2 more)
scripts/: __init__.py  archive_tests.py  backup.sh  bootstrap_ci_runtime.py  build_docs_bundle.py  bundle_codebase.py  chaos_primitives.py  chaos_runner.py  check_docs_governance.py  check_naming_conventions.py  classify_tests.py  cloud_backup.py  create_reopen_inbox_item.py  evaluate_workflow_drift.py  fetch_top5_patents.sh  generate_demo_link.py  generate_policy_governance_report.py  generate_secrets.sh  generate_security_dataset.py  generate_security_dataset_extended.py  generate_workflow_waivers.py  health_check.sh  import_huggingface_datasets.py  init_production.sh  install_mcp.sh  interactive_pii_test.py  organize_policy_governance_artifacts.py  pre-commit  privacy_sanitizer.py  reset_admin_password.py  restore.sh  run_chaos_verification.py  scrub_formal_artifacts.py  seed_dashboard_demo.py  seed_demo_policies.py  seed_sample_datasets.py  seed_security_dataset.py  setup_descope_provider.py  setup_production.sh  test_playground.sh  (+12 more)
server/: .env.example  __init__.py  config.py  config_runtime.py  config_secrets.py  cors_config.py  lifespan.py  logging_config.py  main.py  metrics.py  rate_limiting.py  sentry_config.py
tests/: README.md  __init__.py  audit_router_test_support.py  conftest.py  guardrail_helpers.py  integration_support.py  pii_api_test_support.py  rate_limiting_test_support.py  router_test_support.py  server_test_auth.py  server_test_captcha.py  server_test_rate_limiting.py  server_test_rate_limiting_advanced.py  server_test_traces.py  simple_auth_flow_support.py  sqlite_test_helpers.py  test_access_mode_router.py  test_agent.py  test_approvals_coverage.py  test_async.py  test_audit_router.py  test_audit_router_export.py  test_auth_registration_router.py  test_captcha_utils.py  test_certificate_lookup.py  test_datasets.py  test_deny_exists_and_interactions.py  test_device_auth_router.py  test_formal_api_contract.py  test_guardrail_backend.py  test_guardrail_integration.py  test_guardrail_policy.py  test_mcp_mfa_callback_router.py  test_mfa_utils.py  test_middleware.py  test_permit_exists_fallback.py  test_pii_audit.py  test_pii_compliance.py  test_pii_coverage_extended.py  test_pii_permissions.py  (+10 more)
(+496 files in other folders)
